cmake_minimum_required(VERSION 3.15)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode Sort/main57.cpp Sort/sortTest.cpp Sort/main.cpp T1/mergeString.cpp stack/largestRectangleArea.cpp stack/largestRectangleArea2.cpp string/longestPalindrome.cpp stack/trap.cpp math/canMeasureWater.cpp Sort/minIncrementForUnique.cpp retancle/surfaceArea.cpp Array/numRookCaptures.cpp Array/maxProfit.cpp Array/maxProfit2.cpp string/minimumLengthEncoding.cpp string/minimumLengthEncoding2.cpp distance/maxDistance.cpp Sort/sortColors.cpp stack/maxArea.cpp hamiton/lastRemaining.cpp Sort/sortArray.cpp Sort/sortArray2.cpp stack/maxDepthAfterSplit.cpp stack/gameOfLife.cpp binary/mySqrt.cpp binary/search.cpp binary/searchRotate.cpp binary/findmin.cpp string/myAtoi.cpp dp/minDistance.cpp dp/longestPalindrome.cpp dp/longestPalindrome2.cpp Array/rotateArray.cpp recursion/movingCount.cpp dp/updateMatrix.cpp wisdom/getMaxRepetitions.cpp permute/permute.cpp Sort/mergeKLists.cpp wisdom/twoSum.cpp wisdom/singleNumbers.cpp)